<resources>
    <!-- Global strings -->
    <string name="app_name">Trackhouse</string>
    <string name="welcome_message">Create an account</string>
    <string name="enter_email">Email</string>
    <string name="enter_password">Password</string>
    <string name="trackhouse">trackhouse</string>

    <!-- Strings related to Forgot Password page -->
    <string name="password_instructions">Enter your email and we will send you password reset instructions.</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="go_back">GO BACK</string>
    <string name="prompt_email">Email</string>

    <!-- Strings relatedFavoritesActivityites page-->
    <string name="title_favorites">Favorites</string>


    <!-- Strings relatedSignUpActivitygnUp page-->
    <string name="already_registered">Already registered? Click here to login</string>
    <string name="password_entry">"Enter password (six character min.)"</string>
    <string name="reenter_password">Re-enter password</string>
    <string name="minimum_password">Password must be at least 6 characters</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="member_login">Sign in</string>
    <string name="register">REGISTER</string>

    <!-- Strings relatedProfileActivityfile page-->
    <string name="prompt_username">Create or update your public username</string>
    <string name="button_save">SAVE</string>
    <string name="button_skip">I HAVE A USERNAME, TAKE ME HOME</string>
    <string name="title_profile">Profile</string>


    <!-- Strings relatedSettingsActivityings page -->
    <string name="hint_email">Enter new email</string>
    <string name="hint_new_email">Enter new email</string>
    <string name="new_pass">Enter new password</string>
    <string name="btn_change">CHANGE</string>
    <string name="btn_send">SEND</string>
    <string name="btn_remove">DELETE ACCOUNT</string>
    <string name="change_email">CHANGE EMAIL</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="send_password_reset_email">SEND PASSWORD RESET EMAIL</string>
    <string name="remove_user">DELETE ACCOUNT</string>
    <string name="btn_sign_out">SIGN OUT</string>
    <string name="profile">Profile</string>
    <string name="title_settings">Settings</string>


    <!-- Strings relatedLoginActivityogin page-->
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="auth_failed">Login failed, please try again</string>
    <string name="login">Login</string>
    <string name="log_in">Log In</string>
    <string name="login_button">LOGIN</string>
    <string name="title_activity_login">Log In</string>
    <string name="to_register">"Not a user? Sign up for a free account here"</string>
    <string name="forgot_password">Forgot Password?</string>


    <!-- Strings related Home Activity -->
    <string name="loading_comments">Loading Comments . . ."</string>
    <string name="last_updated">Last Updated"</string>
    <string name="author">Author"</string>
    <string name="comment_reply">Reply"</string>
    <string name="title_home">Home</string>
    <string name="post_url">post_url</string>
    <string name="post_thumbnail">post_thumbnail</string>
    <string name="post_title">post_title</string>
    <string name="post_author">post_author</string>
    <string name="post_updated">post_updated</string>
    <string name="post_id">post_id</string>

    <!-- Strings related to Reddit Login Activity -->
    <string name="create_reddit_account">No account yet? Create one</string>
    <string name="session_username">org.trackhouse.trackhouse.RedditAccount.session_username</string>
    <string name="session_modhash">org.trackhouse.trackhouse.RedditAccount.session_modhash</string>
    <string name="session_cookie">org.trackhouse.trackhouse.RedditAccount.session_cookie</string>

</resources>
