<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/commentHeadingRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:id="@+id/post_thumbnail" />

            <Button
                android:id="@+id/btnReply"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:textAlignment="center"
                android:text="@string/comment_reply"
                android:textSize="8sp"
                android:layout_alignParentRight="true"
                android:layout_alignBottom="@+id/post_thumbnail"
                android:layout_marginEnd="8dp"/>
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/post_thumbnail"
                android:layout_marginStart="8dp">
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/postTitle"
                    android:layout_marginTop="3dp"
                    android:text="comment"
                    android:gravity="center"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/postAuthor"
                    android:layout_marginTop="3dp"
                    android:text="@string/author"
                    android:gravity="center"
                    android:layout_below="@id/postTitle"
                    android:textSize="10sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/postUpdated"
                    android:layout_marginTop="3dp"
                    android:text="@string/last_updated"
                    android:gravity="center"
                    android:layout_below="@id/postAuthor"
                    android:textSize="10sp"/>

            </RelativeLayout>

            <ProgressBar
                android:id="@+id/postsLoading"
                android:layout_width="50dp"
                android:layout_height="50dp"
                style="?android:attr/progressBarStyle"
                android:layout_centerInParent="true"/>
            
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/commentsLoading"
            android:layout_width="100dp"
            android:layout_height="100dp"
            style="?android:attr/progressBarStyle"
            android:layout_centerInParent="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:textStyle="bold"
            android:layout_alignStart="@+id/commentsLoading"
            android:layout_alignTop="@+id/commentsLoading"
            android:layout_alignEnd="@+id/commentsLoading"
            android:layout_alignBottom="@id/commentsLoading"
            android:text="@string/loading_comments"/>

        <ListView
            android:id="@+id/commentsListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/commentHeadingRelativeLayout">
        </ListView>
        

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>